# tkTimePicker

./: setup.cfg  setup.py
src/tktimepicker/: __init__.py  spinlabel.py
src/tktimepicker.egg-info/: PKG-INFO  SOURCES.txt
tktimepicker.egg-info/: PKG-INFO  SOURCES.txt
