[metadata]
name = tktimepicker
version = 1.0
url = https://github.com/bluejay65/tkTimePicker
description = An altered version of tktimepicker to work with Reddcat.
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = tkinter, tktimepicker
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages=find:
install_requires =
    tk

[options.packages.find]
where=src